--- a/manifest.json
+++ b/manifest.json
@@ -1,49 +1,54 @@
 {
-    "name": "Cool PWA Demo",
-    "short_name": "CoolPWA",
-    "start_url": "index.html",
+    "name": "PWA Demo",
+    "short_name": "PWA Demo",
+    "start_url": "./index.html",
     "display": "standalone",
     "background_color": "#fdfdfd",
-    "theme_color": "#db4938",
+    "theme_color": "#2B2D36",
     "orientation": "portrait-primary",
     "icons": [
         {
-            "src": "/images/icons/icon-72x72.png",
+            "src": "./images/icons/icon-48x48.png",
+            "type": "image/png",
+            "sizes": "48x48"
+        },
+        {
+            "src": "./images/icons/icon-72x72.png",
             "type": "image/png",
             "sizes": "72x72"
         },
         {
-            "src": "/images/icons/icon-96x96.png",
+            "src": "./images/icons/icon-96x96.png",
             "type": "image/png",
             "sizes": "96x96"
         },
         {
-            "src": "/images/icons/icon-128x128.png",
+            "src": "./images/icons/icon-128x128.png",
             "type": "image/png",
             "sizes": "128x128"
         },
         {
-            "src": "/images/icons/icon-144x144.png",
+            "src": "./images/icons/icon-144x144.png",
             "type": "image/png",
             "sizes": "144x144"
         },
         {
-            "src": "/images/icons/icon-152x152.png",
+            "src": "./images/icons/icon-152x152.png",
             "type": "image/png",
             "sizes": "152x152"
         },
         {
-            "src": "/images/icons/icon-192x192.png",
+            "src": "./images/icons/icon-192x192.png",
             "type": "image/png",
             "sizes": "192x192"
         },
         {
-            "src": "/images/icons/icon-384x384.png",
+            "src": "./images/icons/icon-284x284.png",
             "type": "image/png",
-            "sizes": "384x384"
+            "sizes": "284x284"
         },
         {
-            "src": "/images/icons/icon-512x512.png",
+            "src": "./images/icons/icon-512x512.png",
             "type": "image/png",
             "sizes": "512x512"
         }
